--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Fast, dependency free, and vectorized base32 encoding and
     decoding. 'b32' supports the Crockford, Z, RFC 4648 lower, hex, and
     lower hex alphabets.
 License: MIT + file LICENSE
-URL: https://github.com/extendr/b32
+URL: https://github.com/extendr/b32, http://extendr.rs/b32/
 Depends: 
     R (>= 4.2)
 Suggests: 
